0032935: Visualization, TKOpenGles - use size window within OpenGl_Window::init()